# qmlcompmgr

./: CMakeLists.txt  LICENSE  README.md  clientwindow.cpp  clientwindow.h  compositor.cpp  compositor.h  glxtexturefrompixmap.cpp  glxtexturefrompixmap.h  main.cpp  main.qml  windowpixmap.cpp  windowpixmap.h  windowpixmapitem.cpp  windowpixmapitem.h
test/: CMakeLists.txt  tst_compositor.cpp  xephyr.h
